--- a/projetos.html
+++ b/projetos.html
@@ -54,6 +54,6 @@
             </div>
         </div>
     </footer>
-    <script src="/projetos.js"></script>
+    <script src="projetos.js"></script>
 </body>
 </html>
