--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
                     <li class="highlightable"><a href="index.html">Início</a></li>
                     <li class="highlightable"><a href="#">Especialidades</a></li>
                     <li class="highlightable"><a href="sobre.html">Sobre</a></li>
-                    <li class="highlightable"><a href="/Trabalho html/projetos.html">Projetos</a></li>
+                    <li class="highlightable"><a href="projetos.html">Projetos</a></li>
                 </ul>
             </nav>
         </div>
